--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -27,7 +27,7 @@ footer
           li
             a href=news_path title="Цікаві новини" новини
           li
-            a title="Як з нами зконтактувати" контакти
+            a href=contacts_path title="Як з нами зконтактувати" контакти
       .columns.medium-4.large-2
         .calculate-btn.green title="Скористайтесь калькулятором та розрахуйте вартість нашої продукції та послуг"
           span
