--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -13,7 +13,7 @@ nav.topnav
         li
           a href=news_path title="Цікаві новини" новини
         li
-          a title="Як з нами зконтактувати" контакти
+          a href=contacts_path title="Як з нами зконтактувати" контакти
       .toggle-language.floated
         p.smalelr title="Перемкнути мову" en
 
