--- a/app/views/pages/blog.html.slim
+++ b/app/views/pages/blog.html.slim
@@ -16,66 +16,66 @@
 
     .columns.medium-4
       .blog-block.tag-related-block data-tag-ids="1"
-        a.img-container
+        a.img-container href=blog_one_path title="Прочитати статтю"
           .img-bg style="background-image: url('http://lorempixel.com/1600/960')"
         .inner
           p.date
             | 12 липня, 2017
             span корисні поради
           p.title Переваги гарячого цинкування кріплень для решіткового настилу
-          a.details-btn title="Детальніше про продукцію"
+          a.details-btn href=blog_one_path title="Прочитати статтю"
             p.small детальніше
             .square = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
 
     .columns.medium-4
       .blog-block.tag-related-block data-tag-ids="2"
-        a.img-container
+        a.img-container href=blog_one_path title="Прочитати статтю"
           .img-bg style="background-image: url('http://lorempixel.com/1600/960')"
         .inner
           p.date
             | 12 липня, 2017
             span корисні поради
           p.title Цинкування кріплень для решіткового настилу цинкування кріплень для решіткового настилу
-          a.details-btn title="Детальніше про продукцію"
+          a.details-btn href=blog_one_path title="Прочитати статтю"
             p.small детальніше
             .square = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
 
     .columns.medium-4
       .blog-block.tag-related-block data-tag-ids="3"
-        a.img-container
+        a.img-container href=blog_one_path title="Прочитати статтю"
           .img-bg style="background-image: url('http://lorempixel.com/1600/960')"
         .inner
           p.date
             | 12 липня, 2017
             span корисні поради
           p.title Гарячого цинкування кріплень для решіткового настилу
-          a.details-btn title="Детальніше про продукцію"
+          a.details-btn href=blog_one_path title="Прочитати статтю"
             p.small детальніше
             .square = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
 
     .columns.medium-4
       .blog-block.tag-related-block data-tag-ids="4"
-        a.img-container
+        a.img-container href=blog_one_path title="Прочитати статтю"
           .img-bg style="background-image: url('http://lorempixel.com/1600/960')"
         .inner
           p.date
             | 12 липня, 2017
             span корисні поради
           p.title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim autem aspernatur quae dolore id nulla, nobis voluptatum quam velit expedita.
-          a.details-btn title="Детальніше про продукцію"
+          a.details-btn href=blog_one_path title="Прочитати статтю"
             p.small детальніше
             .square = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
 
     .columns.medium-4
       .blog-block.tag-related-block data-tag-ids="2,3"
-        a.img-container
+        a.img-container href=blog_one_path title="Прочитати статтю"
           .img-bg style="background-image: url('http://lorempixel.com/1600/960')"
         .inner
           p.date
             | 12 липня, 2017
             span корисні поради
           p.title Cupiditate architecto quibusdam at consectetur vitae quis quod nemo ad dolorem sed exercitationem voluptatibus facilis similique quisquam quaerat alias labore, velit nihil.
-          a.details-btn title="Детальніше про продукцію"
+          a.details-btn href=blog_one_path title="Прочитати статтю"
             p.small детальніше
             .square = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
 
