--- a/app/assets/stylesheets/structure-parts.sass
+++ b/app/assets/stylesheets/structure-parts.sass
@@ -77,6 +77,7 @@
   letter-spacing: 2px
   overflow: hidden
   color: $green
+  cursor: pointer
   &:before
     content: ''
     position: absolute
@@ -96,6 +97,13 @@
     &:before
       transform: scale(2) rotate(10deg)
       opacity: .3
+  &.contact-btn
+    color: $dark
+    border: 2px solid $dark
+    vertical-align: middle
+    @media #{$medium-up}
+      margin-right: 20px
+
 
 .calculate-btn
   position: relative
