--- a/app/assets/stylesheets/structure-parts.sass
+++ b/app/assets/stylesheets/structure-parts.sass
@@ -254,6 +254,7 @@
   +padding-top(30px,70px,80px,100px)
   +padding-bottom(30px,70px,80px,100px)
   background: $green
+  z-index: 2
   .smaller
     color: $dark
     text-transform: uppercase
