--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -10,7 +10,7 @@ footer
         p.title ми пропонуємо
         ul.footer-links
           li
-            a title="Дізнатись все про решітковий настил" решітковий настил
+            a href=resh_nastyl_path title="Дізнатись все про решітковий настил" решітковий настил
           li
             a title="Дізнатись все про сходові марші" сходові марші
           li
