--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -24,7 +24,7 @@ nav.topnav
     .menu-container
       ul
         li
-          a title="Дізнатись все про решітковий настил" решітковий настил
+          a href=resh_nastyl_path title="Дізнатись все про решітковий настил" решітковий настил
           ul
             li
               a Зварний решітковий настил
