--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -102,7 +102,14 @@
         &:before
           left: -16px
 
+  & > ul.vacancies-list
+    li
+      margin: 0
+      &:before
+        display: none
+
 .one-wrap
+  position: relative
   +padding-bottom(50px,80px,80px,120px)
   overflow: hidden
 
