shodovi marshi in progress

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -734,6 +734,8 @@
 
 .resh-nastyl-sidenav
   background: white
+  .sticky-side-block
+    padding: 0
   &:after
     content: ''
     position: absolute
