--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -12,11 +12,11 @@ footer
           li
             a href=resh_nastyl_path title="Дізнатись все про решітковий настил" решітковий настил
           li
-            a title="Дізнатись все про сходові марші" сходові марші
+            a href=shodovi_marshi_path title="Дізнатись все про сходові марші" сходові марші
           li
-            a title="Правильний монтаж нашої продукції" монтаж
+            a href=installation_path title="Правильний монтаж нашої продукції" монтаж
           li
-            a title="Технічні параметри про нашу продукцію в деталях" технічний довідник
+            a href=technical_guide_path title="Технічні параметри про нашу продукцію в деталях" технічний довідник
       .columns.medium-4.large-3
         p.title дивіться також
         ul.footer-links
