--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -27,7 +27,7 @@ nav.topnav
           a href=resh_nastyl_path title="Дізнатись все про решітковий настил" решітковий настил
           ul
             li
-              a Зварний решітковий настил
+              a href=resh_nastyl_one_path Зварний решітковий настил
               ul
                 li 
                   a
@@ -90,11 +90,11 @@ nav.topnav
                     p приклади застосування
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
         li
-          a title="Дізнатись все про сходові марші" сходові марші
+          a href=shodovi_marshi_path title="Дізнатись все про сходові марші" сходові марші
         li
-          a title="Правильний монтаж нашої продукції" монтаж
+          a href=installation_path title="Правильний монтаж нашої продукції" монтаж
         li
-          a title="Технічні параметри про нашу продукцію в деталях" технічний довідник
+          a href=technical_guide_path title="Технічні параметри про нашу продукцію в деталях" технічний довідник
         li
           .calculate-btn.dark title="Скористайтесь калькулятором та розрахуйте вартість нашої продукції та послуг"
             span
