--- a/app/views/application/_menu.html.slim
+++ b/app/views/application/_menu.html.slim
@@ -6,7 +6,7 @@
     .close-menu
       = inline_svg ('icons/ZRN-icons-close-v1.svg')
 
-  a Решітковий настил
+  a href=resh_nastyl_path Решітковий настил
 
   ul
     li
@@ -24,10 +24,14 @@
     li
       a Решітковий настил “serrated”
 
-  a Сходові марші
-  a Монтаж
-  a Технічний довідник
-  a Калькулятор
+  a href=shodovi_marshi_path
+    | Сходові марші
+  a href=installation_path
+    | Монтаж
+  a href=technical_guide_path
+    | Технічний довідник
+  a
+    | Калькулятор
 
   ul
     li
