--- a/app/views/pages/resh_nastyl.html.slim
+++ b/app/views/pages/resh_nastyl.html.slim
@@ -1,4 +1,11 @@
-= render "banner_inner_page"
+.banner-wrap
+
+  .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+
+  .inner
+    = inline_svg ('icons/ZRN-icons-logohren-v1.svg')
+    p.banner-title решітковий настил
+    p.banner-subtitle Ми купуємо рулони з листовим металопрокатом і самі проводимо всі подальші операції
 
 .one-wrap
 
