--- a/app/assets/stylesheets/structure-parts.sass
+++ b/app/assets/stylesheets/structure-parts.sass
@@ -444,3 +444,13 @@ ul.news-list
         opacity: 1
       .name
         color: $green
+
+.examples-label
+  display: inline-block
+  font-family: 'Segoe'
+  font-size: 14px
+  color: $blueGrey900
+  letter-spacing: 1px
+  background: $green
+  margin-left: 120px
+  padding: 6px 16px
