--- a/app/views/pages/shodovi_marshi.html.slim
+++ b/app/views/pages/shodovi_marshi.html.slim
@@ -4,3 +4,38 @@
 
   .inner
     p.banner-title сходові марші
+
+.one-wrap
+
+  .row
+
+    .columns.medium-10.medium-centered.large-8.article-content
+
+      h2 Тонкодисперсный краснозём глазами современников
+      p
+        | ТОВ
+        a «Завод решіткового настилу»
+        |- єдине підприємство в Україні, що займається виробництвом виключно решіткового настилу. Оскільки, на відміну від конкурентів, це наш єдиний напрямок діяльності, можемо сміливо твердити
+
+      p Commodi sit quo doloribus hic, unde aspernatur recusandae omnis, quas fugiat dolore debitis ipsum quae. Necessitatibus quia eaque voluptatum itaque cumque architecto.
+      p Quos pariatur, rem, accusamus aliquid provident sapiente. Deleniti aperiam obcaecati molestiae culpa, aut incidunt? Laudantium, odio cumque laboriosam error dignissimos corrupti molestiae?
+
+      blockquote За час роботи ми розробили велику кількість різноманітних рішень сходових кліток, маршів та драбин, тому більшість потреб клієнтів можуть бути задоволені практично одразу.
+
+      .examples-label
+        | Приклади використання
+
+.clearfix.shodovi_marshi_example
+  .img style="background-image: url('http://lorempixel.com/1600/960/')"
+  .floated-right
+    .article-content.inside-dark-bg
+      h2 Заголовок №2
+      p За потреби можемо виготовити металоконструкції згідно серії 1.450.3-7.94 «Лестницы, площадки, стремянки и ограждения стальные для производственных зданий промышленных предприятий. Выпуск 2 Конструкции из горячекатаных профилей. Чертежи КМ»
+      p Завод решіткового настилу (ZRN) виготовляє перила з кутника, профільної або круглої труби. Після виготовлення наноситься антикорозійний захист – звичайне або порошкове фарбування, гаряче цинкування…
+      i Звертайтесь до нас і Ви отримаєте дійсно повний спектр послуг та якісний сервіс!!!
+
+.remark-wrap
+  .row
+    .columns
+      p.smaller Дивіться також
+      p.title What to see
