--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -108,6 +108,16 @@
       &:before
         display: none
 
+  &.inside-dark-bg
+    h1,h2,h3,h4,h5,h6
+      margin-top: 0
+      color: $green
+    & > p
+      color: white
+    & > i
+      color: $green
+      font-style: italic
+
 .one-wrap
   position: relative
   +padding-bottom(50px,80px,80px,120px)
