installation page done, remove unnecessary js

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,6 +11,7 @@
 @import "plugin-styles/ceaser-easing.sass"
 @import "plugin-styles/owl.carousel"
 @import "plugin-styles/nice-select"
+@import "plugin-styles/lightgallery"
 
 @import "fonts"
 @import "mixins_variables"
