--- a/app/views/pages/installation.html.slim
+++ b/app/views/pages/installation.html.slim
@@ -4,3 +4,72 @@
 
   .inner
     p.banner-title монтаж решіткового настилу
+
+.one-wrap
+
+  .row
+
+    .columns.medium-10.medium-centered.large-8.article-content.inside-installation
+
+      h2 Повний спектр послуг при роботі з решітковим настилом
+      i Від проектування до монтажу
+      p Основи швидкого та безпроблемного монтажу настилу закладаються ще на етапі розробки креслень КМД (планів розкладки настилу), під час якої аналізується характер об’єкта будівництва і, відповідно, підбираються необхідні розміри окремих решіток, визначається оптимальний тип вирізів, кріплень і т.ін. Маючи неабиякий досвід у проектуванні та виготовленні настилу, металевих конструкцій, а також опираючись на досвід збудованих об’єктів, працівники нашої компанії можуть виконати монтаж решіткового настилу на об’єктах будь-якої категорії складності…
+
+.installation-collage-wrap
+  .row
+    .columns
+      .clearfix#animated-thumbnails
+        .floated.square style="background-image: url(#{asset_path('photo/example-1.jpg')})"
+          a href=asset_path('photo/example-1.jpg')
+            img src=asset_path('photo/example-1.jpg')
+        .floated.square style="background-image: url(#{asset_path('photo/example-2.jpg')})"
+          a href=asset_path('photo/example-2.jpg')
+            img src=asset_path('photo/example-2.jpg')
+        .floated.square style="background-image: url(#{asset_path('photo/example-3.jpg')})"
+          a href=asset_path('photo/example-3.jpg')
+            img src=asset_path('photo/example-3.jpg')
+
+.principles-wrap
+  .row
+    .columns
+
+      .section-title.centered Основні принципи, якими ми керуємось при здійсненні монтажних робіт:
+
+      .principle-block
+        .img-holder
+          .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+        .description
+          h2.label
+            | Максимальна зручність для клієнта
+          .inner-text
+            p Ми використовуємо власну техніку, власний інструмент, власний автотранспорт, щоб відмежувати Замовника від будь-яких організаційних питань, пов’язаних із будівництвом
+      .principle-block
+        .img-holder
+          .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+        .description
+          h2.label
+            | Професіоналізм та відповідальність
+          .inner-text
+            p Якщо під час виконання робіт буде помічено якісь недоліки в інших конструктивних елементах, які не пов’язані із решітковим настилом, наші працівники усунуть їх, а в разі неможливості проведення таких робіт власними силами, поінформують Замовника…
+      .principle-block
+        .img-holder
+          .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+        .description
+          h2.label
+            | Естетика
+          .inner-text
+            p Неправильна технологія монтажу може призвести до того, що ідеально виконані решітки після їх встановлення будуть мати не зовсім охайний вигляд, як, априклад, підрізи, підфарбовування, шпарини і т.ін. Ми гарантуємо, що змонтований нашим підприємством настил буде відповідати найвибагливішим естетичним забаганкам Замовника. Для цього ми особливу увагу звертаємо на максимальне уникнення необхідності вирізів та підрізів, симетричне розташування всіх кріплень, відсутність шпарин між решітками…
+      .principle-block
+        .img-holder
+          .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+        .description
+          h2.label
+            | Повага до суміжних підрядних організацій
+          .inner-text
+            p Ми розуміємо, що в більшості випадків при монтажі складних промислових об’єктів, монтаж решіткового настилу відбувається паралельно з монтажем металоконструкцій та технологічного обладнання, тому дуже важливим питанням є якісна синхронізація цих робіт для максимально швидкого та зручного будівництва. Ми з повагою ставимось до всіх учасників будівельного процесу та своєю роботою сприяємо іншим суміжним організаціям, прислухаючись до їхніх потреб та вибудовуючи відповідну технологію укладки решіткового настилу.
+
+.remark-wrap
+  .row
+    .columns
+      p.smaller Наша продукція
+      p.title Решітковий настил
