--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -3,6 +3,7 @@
   h1,h2,h3,h4,h5,h6
     margin: 100px 0 30px
     letter-spacing: 2px
+    line-height: 1
     @media #{$small-only}
       margin: 70px 0 20px
     &:first-child
