--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -51,7 +51,7 @@
             .label
               | Монтаж
         .columns.medium-5.large-3
-          .technical-quide
+          .technical-quide.fixed
             .main-icon = inline_svg ('icons/ZRN-icon-techbook-v1.svg')
             .squared-download-links.clearfix
               a.floated
