--- a/app/views/pages/technical_guide.html.slim
+++ b/app/views/pages/technical_guide.html.slim
@@ -6,3 +6,70 @@
     = inline_svg ('icons/ZRN-icons-logohren-v1.svg')
     p.banner-title технічний довідник
     p.banner-subtitle інформація для професіоналів
+
+.technical-quide-wrap
+
+  .row
+    .columns.medium-9.large-10
+
+      .article-content
+        h2 Розділи довідника
+
+      ol.technical-quide-list
+        li
+          a Таблиця навантажень зварного настилу
+        li
+          a Таблиця навантажень пресованого настилу
+        li
+          a Способи укладки решіток
+        li
+          a Типи обрамлення
+        li
+          a Способи кріплення настилу
+        li
+          a Таблиця ваги решіткового настилу
+        li
+          a допуски та відхилення
+        li
+          a параметри сходинок
+        li
+          a Приклади розкладки настилу
+        li
+          a решітки з зубами протиковазання
+
+    .columns.medium-3.large-2
+      p.files-to-download файли для завантаження
+      .technical-quide
+        .squared-download-links.clearfix
+          a.floated
+            .inner
+              .icon
+                = inline_svg ('icons/ZRN-icons-download-v1.svg')
+              .file-name
+                | каталог
+              .size
+                | (3.4 мб)
+          a.floated
+            .inner
+              .icon
+                = inline_svg ('icons/ZRN-icons-download-v1.svg')
+              .file-name
+                | каталог
+              .size
+                | (3.4 мб)
+          a.floated
+            .inner
+              .icon
+                = inline_svg ('icons/ZRN-icons-download-v1.svg')
+              .file-name
+                | каталог
+              .size
+                | (3.4 мб)
+          a.floated
+            .inner
+              .icon
+                = inline_svg ('icons/ZRN-icons-download-v1.svg')
+              .file-name
+                | каталог
+              .size
+                | (3.4 мб)
