--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -61,6 +61,7 @@
       padding-left: 70px
       &:before
         width: 56px
+        height: 56px
         line-height: 56px
         +translate(0,0)
   .inner-text
@@ -111,14 +112,15 @@
 .technical-quide
   position: relative
   background: $dark
-  padding-top: 30px
-  height: 430px
+  &.fixed
+    padding-top: 30px
+    height: 430px
   .main-icon
     width: 40px
     height: 50px
     margin: 0 auto 30px
   .squared-download-links
-    max-width: 220px
+    // max-width: 220px
     margin: 0 auto
     border: 1px solid $blueGrey300
     .floated
@@ -758,12 +760,13 @@
     width: 36%
     padding: 0 60px
 
-ol.resh-nastyl-list
+ol.resh-nastyl-list, ol.technical-quide-list
   position: relative
   counter-reset: resh-nastyl-list
   list-style: none
+  margin-bottom: 50px
   li
-    margin: 10px 0
+    padding: 10px 0
     counter-increment: resh-nastyl-list
     &:before
       content: counter(resh-nastyl-list)
@@ -787,6 +790,9 @@ ol.resh-nastyl-list
     @media screen and (min-width: 1920px)
       a
         font-size: 14px
+ol.technical-quide-list
+  @media #{$large-up}
+    column-count: 2
 
 .shodovi_marshi_example
   position: relative
@@ -895,6 +901,7 @@ ol.resh-nastyl-list
       padding-left: 70px
       &:before
         width: 56px
+        height: 56px
         line-height: 56px
         +translate(0,0)
   .inner-text
@@ -923,3 +930,16 @@ ol.resh-nastyl-list
       padding: 20px 20px 60px
     @media #{$xxlarge-up}
       padding: 50px 50px 80px
+
+.technical-quide-wrap
+  +padding-top(60px,80px,80px,100px)
+  +padding-bottom(80px,120px,120px,150px)
+
+  .files-to-download
+    font-size: 12px
+    color: $blueGrey900
+    text-transform: uppercase
+    font-weight: 700
+    margin-bottom: 20px
+    @media #{$medium-up}
+      margin-top: 100px
