technical guide one

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -32,3 +32,4 @@
 @import "page-components/accordion"
 @import "page-components/popup"
 @import "page-components/slider"
+@import "page-components/table"
