--- a/app/views/pages/technical_guide.html.slim
+++ b/app/views/pages/technical_guide.html.slim
@@ -17,25 +17,35 @@
 
       ol.technical-quide-list
         li
-          a Таблиця навантажень зварного настилу
+          a href=technical_loading_table_path
+            | Таблиця навантажень зварного настилу
         li
-          a Таблиця навантажень пресованого настилу
+          a href=technical_loading_table_path
+            | Таблиця навантажень пресованого настилу
         li
-          a Способи укладки решіток
+          a href=technical_guide_one_path
+            | Способи укладки решіток
         li
-          a Типи обрамлення
+          a href=technical_guide_one_path
+            | Типи обрамлення
         li
-          a Способи кріплення настилу
+          a href=technical_guide_one_path
+            | Способи кріплення настилу
         li
-          a Таблиця ваги решіткового настилу
+          a href=technical_guide_one_path
+            | Таблиця ваги решіткового настилу
         li
-          a допуски та відхилення
+          a href=technical_guide_one_path
+            | допуски та відхилення
         li
-          a параметри сходинок
+          a href=technical_guide_one_path
+            | параметри сходинок
         li
-          a Приклади розкладки настилу
+          a href=technical_guide_one_path
+            | Приклади розкладки настилу
         li
-          a решітки з зубами протиковазання
+          a href=technical_guide_one_path
+            | решітки з зубами протиковазання
 
     .columns.medium-3.large-2
       p.files-to-download файли для завантаження
