--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -32,6 +32,10 @@
     color: $blueGrey700
     font-style: italic
     margin-bottom: 20px
+    span
+      font-weight: 700
+      &:before, &:after
+        content: '\00A0'
   p
     & > a
       color: $green
