--- a/app/views/pages/technical_guide_one.html.slim
+++ b/app/views/pages/technical_guide_one.html.slim
@@ -8,7 +8,7 @@
 
 .one-wrap.article-content
   .row
-    .columns.medium-9.large-8
+    .columns.large-8
 
       h2 Рекомендации по выбору решетчатого настила с зубьями противоскольжения
       p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ipsum blanditiis itaque soluta laboriosam cum, sint sapiente eos est reprehenderit omnis enim nemo atque, nihil officiis, voluptatem ad libero illo.
@@ -39,7 +39,7 @@
           td > 35
           td r13
 
-    .columns.medium-9.large-8
+    .columns.large-8
       h2 Cоответствие типов противоскольжения классу противоскольжения согласно BGR181
     .columns
       table
@@ -77,7 +77,7 @@
           td -------
           td s4*
           td * зубья наносятся как на несущую  так и на поперечную полосы
-    .columns.medium-9.large-8.end
+    .columns.large-8.end
       i
         | * Для сварного настила принята ячейка 34*38, для прессованного – 33*33
       i
