--- a/app/assets/stylesheets/page-components/table.sass
+++ b/app/assets/stylesheets/page-components/table.sass
@@ -1,6 +1,5 @@
 table
   width: 100%
-  margin: 30px 0
   tr
   th
     background: $dark
@@ -9,6 +8,11 @@ table
   td
     color: $blueGrey700
   td,th
-    padding: 10px 30px
+    padding: 10px
     text-align: center
     border: 1px solid $blueGrey200
+    min-width: 150px
+  p
+    margin-bottom: 0
+  img
+    max-width: 200px
