404, terms of use, examples pages are done

--- a/app/views/pages/resh_nastyl_one.html.slim
+++ b/app/views/pages/resh_nastyl_one.html.slim
@@ -30,9 +30,9 @@
       p Commodi sit quo doloribus hic, unde aspernatur recusandae omnis, quas fugiat dolore debitis ipsum quae. Necessitatibus quia eaque voluptatum itaque cumque architecto.
       p Quos pariatur, rem, accusamus aliquid provident sapiente. Deleniti aperiam obcaecati molestiae culpa, aut incidunt? Laudantium, odio cumque laboriosam error dignissimos corrupti molestiae?
 
-.examples-wrap
+.examples-wrap.with-white-bg
   .title приклади використання
-  .row
+  .row.columns-left
     .columns.medium-4
       a.example-block
         .img
@@ -50,7 +50,7 @@
           .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
           .hover-img
             = inline_svg ('icons/eye.svg')
-          .category промисловість
+          .category фасади
         p.name Металеві решітки
         p.small
           span 19
@@ -61,7 +61,7 @@
           .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
           .hover-img
             = inline_svg ('icons/eye.svg')
-          .category промисловість
+          .category сходові марші 
         p.name Металеві решітки
         p.small
           span 19
