--- a/app/assets/stylesheets/structure-parts.sass
+++ b/app/assets/stylesheets/structure-parts.sass
@@ -108,6 +108,8 @@
     color: $dark
     border: 2px solid $dark
     background: $green
+  @media #{$small-only}
+    height: initial
 
 .calculate-btn
   position: relative
@@ -380,16 +382,6 @@ ul.news-list
 .examples-wrap
   position: relative
   +padding-bottom(60px,100px,100px,120px)
-  &:after
-    content: ''
-    display: block
-    width: 100%
-    height: 80%
-    position: absolute
-    bottom: 0
-    left: 0
-    background: white
-    z-index: -1
   .title
     position: relative
     font-size: 14px
@@ -407,11 +399,22 @@ ul.news-list
       background: $green
       +x-align
       bottom: 0
+  &.with-white-bg
+    &:after
+      content: ''
+      display: block
+      width: 100%
+      height: 80%
+      position: absolute
+      bottom: 0
+      left: 0
+      background: white
+      z-index: -1
 
   .example-block
     width: 100%
     text-align: center
-    margin-bottom: 30px
+    margin-bottom: 50px
     .img
       +img-container(120%)
       margin-bottom: 10px
@@ -425,6 +428,19 @@ ul.news-list
       svg
         fill: $green
         +centered-inside
+    .category
+      position: absolute
+      display: inline-block
+      font-family: 'Segoe'
+      font-size: 12px
+      text-transform: uppercase
+      color: $grey900
+      background: $green
+      letter-spacing: 1px
+      padding: 6px 15px
+      z-index: 1
+      +x-align
+      bottom: 20px
     .name
       font-size: 24px
       color: $blueGrey900
@@ -444,6 +460,8 @@ ul.news-list
         opacity: 1
       .name
         color: $green
+    @media screen and (min-width:1920px)
+      margin-bottom: 80px
 
 .examples-label
   display: inline-block
