--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -30,7 +30,7 @@ nav.topnav
               a href=resh_nastyl_one_path Зварний решітковий настил
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
@@ -39,7 +39,7 @@ nav.topnav
               a Пресований решітковий настил
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
@@ -48,7 +48,7 @@ nav.topnav
               a Сходи
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
@@ -57,7 +57,7 @@ nav.topnav
               a Кріплення
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
@@ -66,7 +66,7 @@ nav.topnav
               a Просічно-витяжний лист
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
@@ -75,7 +75,7 @@ nav.topnav
               a Розробка КМФ
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
@@ -84,7 +84,7 @@ nav.topnav
               a Решітковий настил “Serrated”
               ul
                 li 
-                  a
+                  a href=examples_path
                     .img-container
                       .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
                     p приклади застосування
